@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-09T01:02:37Z",
-  "count_outdated" : 119,
-  "uniques_outdated" : 101,
+  "timestamp" : "2025-11-13T01:00:09Z",
+  "count_outdated" : 120,
+  "uniques_outdated" : 102,
   "count" : 122,
   "uniques" : 104,
   "clones" : [
-    {
-      "timestamp": "2025-10-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-31T00:00:00Z",
       "count": 1,
